feat(ticket, drs): add role-based ticket assignment and dynamic DRS handling
- ticketController:
  - add role-based assignee handling in create ticket API
  - assign HR as default assignee when ticket is created by a user
  - allow custom assignee selection for other roles

- drsController:
  - add support for dynamic fields from admin-side model of drsFactor
  - update get and post APIs to handle dynamic fields
  - add getTeamNotFilledDrs functionality for PM, TL, and ADMIN roles
